--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team page</title>
-<link rel="shortcut icon" href="images/devchallenges.png" type="image/x-icon">
+<link rel="icon" href="images/devchallenges.png" type="image/x-icon">
 </head>
 <body>
-<div><b>The Creative Crew</b></div>
 <div>
-    <p>WHO ARE ME</p>
-    <P>We are team of creativety diverse,<br> driven, <br>innovative individuals <br> working in various locations from the world.</P>
+    <H2>The Creative Crew</H2>
+</div>
+<div>
+    <p>
+        <b>WHO WE ARE</b>
+    </p>
+    <P>We are team of creativety diverse,driven,
+        <br>innovative individuals working in various <br>
+         locations from the world.</P>
     <div><img src="./images/photo1.png" alt="a young man">
         <h2>Bill Mahoney</h2>
         <img src="./images/photo2.png" alt="a woman on red">
@@ -19,6 +25,10 @@
         <h2>Shae Le</h2>
         <img src="./images/photo4.png" alt="">
         <h2>Skylah Lu</h2>
+        <img src="images/photo5.png" alt="">
+        <h2>Giff Richards</h2>
+        <img src="images/photo6.png" alt="">
+        <h2>Stan Johnn</h2>
 </div>
 
 </body>
